--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DtBHZNR3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.RzK1z1C8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.wJifRek6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DX5FbHph.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DtJnzEBV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BeZKF0LZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CnM1KhzZ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.GshhNGg8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Bzc4xlhG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.BTQBtVcH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.4n8uYBtG.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BCM8L41c.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Cts7Gu8r.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.BTj3NxHq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DBLnNNqE.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.iKHU3CXM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.B83Hhwwq.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.BHrkrsYp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.Cx5oWuxk.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_6igw1d = {
+					__sveltekit_1k9xdln = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DtBHZNR3.js"),
-						import("./_app/immutable/entry/app.BeZKF0LZ.js")
+						import("./_app/immutable/entry/start.wJifRek6.js"),
+						import("./_app/immutable/entry/app.CnM1KhzZ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
