--- a/completions.html
+++ b/completions.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D6XPb2Zw.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CnA5eEeO.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CON69TqT.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BjCj5_dV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DtJnzEBV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.C76eFn6C.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.o0FXQ3jO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.GshhNGg8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Bzc4xlhG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.BTQBtVcH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.4n8uYBtG.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B4jwbKFk.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.RsRhbeKz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.BTj3NxHq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.C1OB_dNK.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DZm9kW0i.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.B83Hhwwq.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.DWzqhnWe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.Cx5oWuxk.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1tifblh = {
+					__sveltekit_a37pga = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D6XPb2Zw.js"),
-						import("./_app/immutable/entry/app.C76eFn6C.js")
+						import("./_app/immutable/entry/start.CON69TqT.js"),
+						import("./_app/immutable/entry/app.o0FXQ3jO.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
