--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DU0cdWXN.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BmJi1n6F.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B-70Y75Y.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CDxHoRn3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.C_tlSiHQ.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B-fErh4w.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BhbYdKa3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.pO_nrE3v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.6aZjTlSh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DqZJeKMG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.DUYrQc2S.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Qgk5d7hM.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BCBmJQg0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.D9Ikmt_S.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DvoTMW65.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BuLreaYJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.BL6Pav9f.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.BkKy2ez2.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1m9cmpm = {
+					__sveltekit_nvtem5 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DU0cdWXN.js"),
-						import("./_app/immutable/entry/app.B-fErh4w.js")
+						import("./_app/immutable/entry/start.B-70Y75Y.js"),
+						import("./_app/immutable/entry/app.BhbYdKa3.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
